# html2pdf

./: .gitignore  CHANGELOG.md  LICENSE  README.md  hook-tkinterdnd2.py  html2pdf.spec  pyi_rth_attach_console.py  pyproject.toml  requirements.txt
LISENSES/: wkhtmltopdf-LGPL-3.0.txt
src/html2pdf/: __main__.py  main.py  version.py
src/html2pdf/cli/: cli_app.py  input_resolver.py  logger_engine.py  output_resolver.py  parser.py  runner.py
src/html2pdf/core/: converter.py  file_utils.py  logger.py  wkhtmltopdf_check.py
src/html2pdf/docs/: HANDBUCH.md  development_v0.1.0.md  development_v0.2.0.md  help_text.md
src/html2pdf/gui/: gui_app.py  logger_gui.py
