[project]
name = "html2pdf"
dynamic = ["version"]
description = "GUI- und CLI-Tool zur HTML-zu-PDF-Konvertierung mit wkhtmltopdf"
authors = [
    { name = "Dieter Eckstein", email = "carosaar@online.de" }
]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}

keywords = ["html", "pdf", "wkhtmltopdf", "converter", "gui", "cli"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: MIT License",
    "Environment :: Win32 (MS Windows)",
    "Topic :: Utilities",
]

dependencies = [
]

[tool.setuptools.dynamic]
version = {attr = "html2pdf.version.__version__"}

[project.scripts]
html2pdf = "html2pdf.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
